fixed layout & spacing

--- a/frontend/app/src/Components/landingPage2.css
+++ b/frontend/app/src/Components/landingPage2.css
@@ -12,24 +12,24 @@
 }
 .MyResume .picMyResume {
  
-  margin-top: 0.5vw;
-  margin-bottom: 0.5vw;
-  width: 97.5vw;
+  margin-top: 1vh;
+  margin-bottom: 0.5vh;
+
+  width: 98vw;
   height: auto;
 
-  border-radius: 1vw;
-  overflow: overlay;
+  border-radius: 2vw;
 }
 
 .MyPortfolio .picMyPortfolio{
 
-  margin-top: 0.5vw;
-  margin-bottom: 0.5vw;
-  width: 97.5vw;
-  
+  margin-top: 0.5vh;
+  margin-bottom: 0vh;
+
+  width: 98vw;
   height: auto;
 
-  border-radius: 1.5vw;
+  border-radius: 2vw;
 
 }
 
@@ -40,7 +40,7 @@
   color: white;
   left: 0;
   right: 0;
-  top: 25%;
+  top: 12vh;
   color: white;
   font-size: 6vw;
   font-family: 'Nunito';
@@ -53,7 +53,7 @@
   color: white;
   left: 0;
   right: 0;
-  top: 50%;   
+  top: 25vh;   
   font-size: 2vw;
   font-family: 'Kanit';
   font-weight: 200;
@@ -66,7 +66,7 @@
   color: white;
   left: 0;
   right: 0;
-  top: 28%;   
+  top: 14vh;  
   font-size: 6vw;
   font-family: 'Nunito';
 
@@ -79,7 +79,7 @@
   color: white;
   left: 0;
   right: 0;
-  top: 53%;   
+  top: 28vh;   
   font-size: 2vw;
   font-family: 'Kanit';
   font-weight: 200;
