--- a/frontend/app/src/Components/landingPage3.css
+++ b/frontend/app/src/Components/landingPage3.css
@@ -5,29 +5,29 @@
 }
 
 .column .LRounded1{
-    border-radius: 1vw;
-    margin-top: 0.5vw;
-    margin-bottom: 0.5vw;
-    width: 48.2vw;
-    height: 100%;
+    
+    margin-top: 1vh;
+    margin-bottom: 0vh;
+    margin-right: 0.5vw;
 
-    right: 0.5vw;
-    
-    position: relative;
-    
+    width: 48.5vw;
+    height: 98vh;
+
+    border-radius: 2vw;
+  
 }
 
 .column .LRounded2{
-    border-radius: 1vw;
-    margin-top: 0.5vw;
-    margin-bottom: 0.5vw;
+    
+    margin-top: 1vh;
+    margin-bottom: 0vh;
+    margin-left: 0.5vw;
 
-    width: 48vw;
-    height: 100%;
+    width: 48.5vw;
+    height: 98vh;
 
-    left: 0.5vw;
+    border-radius: 2vw;
 
-    position: relative;
 }
   
 .column .MyAnalytics #Analytics {
@@ -35,9 +35,9 @@
     z-index: 999;
     text-align: left;
     color: white;
-    left: 3%;
+    left: 3vw;
     right: 0;
-    top: 65%;
+    top: 65vh;
     font-size: 6vw;   
     font-family: 'Nunito';
 }
@@ -48,9 +48,9 @@
     z-index: 999;
     text-align: left;
     color: white;
-    left: 3%;
+    left: 3vw;
     right: 0;
-    top: 77.5%;   
+    top: 77vh;   
     font-size: 2vw;
     font-family: 'Kanit';
     font-weight: 200;
@@ -62,8 +62,8 @@
     text-align: right;
     color: white;
     left: 0;
-    right: 3%;
-    top: 5%;
+    right: 3vw;
+    top: 4vh;
     color: white;
     font-size: 6vw;
     font-family: 'Nunito';
@@ -75,8 +75,8 @@
     text-align: right;
     color: white;
     left: 0;
-    right: 3%;
-    top: 17.5%;   
+    right: 3vw;
+    top: 16vh;   
     font-size: 2vw;
     font-family: 'Kanit';
     font-weight: 200;
