--- a/frontend/app/src/index.css
+++ b/frontend/app/src/index.css
@@ -28,5 +28,6 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.2);
+  background: transparent;
+  background-color: transparent;
 }
